--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
@@ -13,4 +13,10 @@
     <ProjectReference Include="..\CoreOpenTibiaServer.Infra.Data\COTS.Data.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>C:\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.7\System.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
