--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="editorconfig" Version="0.12.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
