--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
@@ -2,6 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Platforms>AnyCPU;x64</Platforms>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
