--- a/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
+++ b/CoreOpenTibiaServer/src/COTS.Infra.CrossCutting.Ioc/COTS.Infra.CrossCutting.Ioc.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="2.0.0" />
+    <PackageReference Include="System.Memory" Version="4.4.0-preview1-25305-02" />
   </ItemGroup>
 
   <ItemGroup>
